Rename NavFooter Styled component, create StyledNavFootButtons css and import in NavFooter component for nav button styling, change nav icon size to 3x, increase body padding and FormFooter padding to prevent NavFooter overlap

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -18,7 +18,7 @@ body {
   box-sizing: inherit;
   overscroll-behavior: contain;
   /* Padding for Sticky Navigation footer and Sticky SubmitButton component in forms */
-  padding-bottom: 100px;
+  padding-bottom: 130px;
 }
 .atd-spinner {
   animation: spinner 1s infinite;
